resolved extra whtspace issue on mobile

--- a/sass/base/_forms.scss
+++ b/sass/base/_forms.scss
@@ -6,3 +6,7 @@
 .webform-grid {
   width: 100%;
 }
+
+input {
+  max-width: 100%;
+}
