--- a/sass/components/_page.scss
+++ b/sass/components/_page.scss
@@ -1,3 +1,11 @@
+html {
+  overflow-x: hidden;
+}
+
+body {
+  background-color: #fff;
+}
+
 #ui-wrapper .l-container {
   width: 100%;
 }
@@ -23,10 +31,6 @@
       }
     }
   }
-}
-
-body {
-  background-color: #fff;
 }
 
 .l-main-header {
